--- a/animals.html
+++ b/animals.html
@@ -5,25 +5,25 @@ layout: article_list
 
 <div class="article">
   <div class="article1">
-    <img src="/web1-jekyll/img/surface.jpg" alt="photo of surface" class="photo-surface">
+    <img src="/web1-jekyll/img/bearsafety_3.jpg" alt="photo of bear" class="photo-surface">
     <h4>Staying Safe Around Bears</h4>
       <p>Seeing a bear in the wild is a special treat for any visitor to a national park. While it is an exciting moment, it is important to remember that bears in national parks are wild and can be dangerous. </p>
   </div>
 
 <div class="article2">
- <img src="/web1-jekyll/img/water.jpg" alt="photo of water" class="photo-water">
+ <img src="/web1-jekyll/img/bearsign.jpg" alt="photo of bearsign" class="photo-water">
   <h4>Hiking in Bear Country</h4>
     <p> Be aware. Be alert while on the trail, and always be on the lookout for bears. Keep an eye out for fresh tracks, scat, other signs (torn up logs, digging, fresh claw marks on trees), and carrion (carcasses) in the area.</p>
 </div>
 
 <div class="article3">
-<img src="/web1-jekyll/img/water1.jpg" alt="photo of water1" class="photo-water1">
+<img src="/web1-jekyll/img/bison.jpeg" alt="photo of bison" class="photo-water1">
   <h4>Bison Bellows: The winter survivor</h4>
   <p>Every year when mid-winter arrives, snow can blanket the northern Great Plains, temperatures can drop well below zero, and the winds can howl unmercifully, and yet bison remain alive and well on the hostile landscape. Indeed, bison have evolved digestive, physiological, and behavioral strategies that allow them to survive some of the harshest weather in North America.</p>
 </div>
 
 <div class="article4">
-<img src="/web1-jekyll/img/nature.jpeg" alt="photo of nature" class="photo-nature">
+<img src="/web1-jekyll/img/bee.jpeg" alt="photo of bee" class="photo-nature">
   <h4>What is a pollinator?</h4>
   <p>A pollinator is anything that helps carry pollen from the male part of the flower (stamen) to the female part of the same or another flower (stigma). The movement of pollen must occur for the the plant to become fertilized and produce fruits, seeds, and young plants. Some plants are self-pollinating, while others may be fertilized by pollen carried by wind or water. Still, other flowers are pollinated by insects and animals - such as bees, wasps, moths, butterflies, birds, flies and small mammals, including bats.</p>
 </div>
