--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@ layout: article_list
 <div class="article">
   <div class="article1">
     <a href="/web1-jekyll/history_of_yellowstone.html">
-    <img src="/web1-jekyll/img/yellowstone_history.jpeg" alt="yellowstone_history" class="photo-surface">
+    <img src="/web1-jekyll/img/yellowstone_history.jpg" alt="yellowstone_history" class="photo-surface">
     <h4>Park History:</h4>
       <p>The human history of the Yellowstone region goes back more than 11,000 years. The stories of people in Yellowstone are preserved in objects that convey information about past human activities in the region, and in people’s connections to the land that provide a sense of place or identity.</p>
   </div>
@@ -31,7 +31,7 @@ Carving History:</h4>
 </a>
 
 <div class="article4">
-<img src="/web1-jekyll/img/mthistory.jpeg" alt="mthistory" class="photo-nature">
+<img src="/web1-jekyll/img/mthistory.jpg" alt="mthistory" class="photo-nature">
   <h4>
 Memorial History:</h4>
   <p>Getting this project underway was a challenge all by itself. Once Doane Robinson and others had found a sculptor, Gutzon Borglum, they had to get permission to do the carving.</p>
