--- a/animals.html
+++ b/animals.html
@@ -5,7 +5,7 @@ layout: article_list
 
 <div class="article">
   <div class="article1">
-    <img src="/web1-jekyll/img/bear.jpg" alt="photo of bear" class="photo-surface">
+    <img src="/web1-jekyll/img/bear.jpeg" alt="photo of bear" class="photo-surface">
     <h4>Staying Safe Around Bears</h4>
       <p>Seeing a bear in the wild is a special treat for any visitor to a national park. While it is an exciting moment, it is important to remember that bears in national parks are wild and can be dangerous. </p>
   </div>
