--- a/animals.html
+++ b/animals.html
@@ -2,7 +2,7 @@
 layout: article_list
 ---
 
-
+<h1>Animals</h1>
 <div class="article">
   <div class="article1">
     <img src="/web1-jekyll/img/bear.jpeg" alt="photo of bear" class="photo-surface">
