--- a/people.html
+++ b/people.html
@@ -2,7 +2,7 @@
 layout: article_list
 ---
 
-
+<h1>People</h1>
 <div class="article">
   <div class="article1">
     <img src="/web1-jekyll/img/yosemite.jpeg" alt="photo of surface" class="photo-surface">
@@ -17,7 +17,7 @@ layout: article_list
 
 <div class="article2">
   <a href="/web1-jekyll/Ancestral-Pueblo-People-of-Mesa-Verde.html">
- <img src="/web1-jekyll/img/mesa-verde.jpeg" alt="photo of water" class="photo-water">
+ <img src="/web1-jekyll/img/mesa-verde.jpg" alt="photo of water" class="photo-water">
   <h4>Ancestral Pueblo People of Mesa Verde:</h4>
     <p>About 1,400 years ago, long before Europeans explored North America, a group of people living in the Four Corners region chose Mesa Verde for their home. For more than 700 years they and their descendants lived and flourished here, eventually building elaborate stone communities in the sheltered alcoves of the canyon walls. </p>
   </a>
