--- a/animals.html
+++ b/animals.html
@@ -7,7 +7,11 @@ layout: article_list
   <div class="article1">
     <img src="/web1-jekyll/img/bear.jpeg" alt="photo of bear" class="photo-surface">
     <h4>Staying Safe Around Bears</h4>
-      <p>Seeing a bear in the wild is a special treat for any visitor to a national park. While it is an exciting moment, it is important to remember that bears in national parks are wild and can be dangerous. </p>
+      <p>Seeing a bear in the wild is a special treat for any visitor to a national park. 
+        While it is an exciting moment, it is important to remember that bears in national parks are wild and can be dangerous.Running away or climbing a tree can activate the bear's hunting instincts and lead to it perceiving the human as prey.
+        If a bear does charge, persons are advised to hold their ground, as most bear charges are bluffs. 
+        Finally, if a bear does attack, the usual advice is to curl into a fetal position so as to shield vital organs and appear non-threatening.
+    </p>
   </div>
 
 <div class="article2">
