--- a/people.html
+++ b/people.html
@@ -6,7 +6,7 @@ layout: article_list
 <div class="article">
   <div class="article1">
     <img src="/web1-jekyll/img/yosemite.jpeg" alt="photo of surface" class="photo-surface">
-    <a href="/web1-jekyll/people-of-yosemite.html"
+    <a href="/web1-jekyll/people-of-yosemite.html">
     <h4>People of Yosemtite:</h4>
       <p>Water occurs in many forms; precipitation (rain, fog and snow), streams, rivers, ponds, lakes, snow pack, permafrost,       glaciers, soil water (moisture), and groundwater. 
        This is water that can be seen on the surface such as rivers, streams, lakes, ponds, glaciers or wetlands. 
