--- a/Ancestral-Pueblo-People-of-Mesa-Verde.html
+++ b/Ancestral-Pueblo-People-of-Mesa-Verde.html
@@ -5,4 +5,10 @@ title: Ancestral Pueblo People of Mesa Verde
 <div class= "img2">
 <img src="/web1-jekyll/img/mesa-verde.jpg" alt="photo of surface" class="photo-surface">
 </div>
+<div class="water-name">
+  Ancestral Pueblo People of Mesa Verde
+</div>
+
+    <div class="water2">
 About 1,400 years ago, long before Europeans explored North America, a group of people living in the Four Corners region chose Mesa Verde for their home. For more than 700 years they and their descendants lived and flourished here, eventually building elaborate stone communities in the sheltered alcoves of the canyon walls. Then, in the late A.D. 1200s, in the span of a generation or two, they left their homes and moved away. Mesa Verde National Park preserves a spectacular reminder of this ancient culture.
+</div>
