--- a/Ancestral-Pueblo-People-of-Mesa-Verde.html
+++ b/Ancestral-Pueblo-People-of-Mesa-Verde.html
@@ -6,7 +6,7 @@ title: Ancestral Pueblo People of Mesa Verde
 <img src="/web1-jekyll/img/mesa-verde.jpg" alt="photo of surface" class="photo-surface">
 </div>
 <div class="water-name">
-  Ancestral Pueblo People of Mesa Verde
+  <h3> Ancestral Pueblo People of Mesa Verde </h3>
 </div>
 
     <div class="water2">
