--- a/people.html
+++ b/people.html
@@ -23,15 +23,15 @@ layout: article_list
 </div>
 
 <div class="article3">
-<img src="/web1-jekyll/img/water1.jpg" alt="photo of water1" class="photo-water1">
+<img src="/web1-jekyll/img/hike.jpeg" alt="photo of water1" class="photo-water1">
   <h4>Benefits of Hiking</h4>
       <p>The warm sunshine on your face, the sound of the wind rushing through the trees overhead, and the soft earthy feel of the trail under your boots. Not only are these experiences enjoyable to have, but they’re good for you, too. </p>
 </div>
 
 <div class="article4">
-<img src="/web1-jekyll/img/nature.jpeg" alt="photo of nature" class="photo-nature">
-  <h4>A World of World Life:</h4>
-  <p>From the smallest mouse to a giant grizzly bear, national parks are home to animals of all shapes and sizes.</p>
+<img src="/web1-jekyll/img/sf.jpeg" alt="photo of nature" class="photo-nature">
+  <h4>Alcatraz Island:</h4>
+  <p>When we hear the word Alcatraz the people we think of usually are the federal inmates, Al Capone, Robert Stroud and the like. Follow the links below to learn some of their stories./p>
 </div>
 
 
