--- a/Ancestral-Pueblo-People-of-Mesa-Verde.html
+++ b/Ancestral-Pueblo-People-of-Mesa-Verde.html
@@ -4,6 +4,7 @@ title: Ancestral Pueblo People of Mesa Verde
 ---
 <div class= "img2">
 <img src="/web1-jekyll/img/mesa-verde.jpg" alt="photo of surface" class="photo-surface">
+</div>
 <div class="water-name">
   <h3> Ancestral Pueblo People of Mesa Verde </h3>
 </div>
