--- a/Ancestral-Pueblo-People-of-Mesa-Verde.html
+++ b/Ancestral-Pueblo-People-of-Mesa-Verde.html
@@ -3,7 +3,7 @@ layout: specific
 title: Ancestral Pueblo People of Mesa Verde
 ---
 <div class= "img2">
-<img src="/web1-jekyll/img/mesa-verde.jpg" alt="photo of surface" class="photo-surface">
+<img src="/web1-jekyll/img/mesa.jpg" alt="photo of surface" class="photo-surface">
 </div>
 <div class="water-name">
   <h3> Ancestral Pueblo People of Mesa Verde </h3>
